// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Emits frontmatter specific to index 1`] = `
"---
id: index
hide_title: true
custom_edit_url: null
title: Example
slug: /
---

## Example
"
`;

exports[`Emits frontmatter with "A Class" title 1`] = `
"---
id: a-class
hide_title: true
custom_edit_url: null
title: A Class
---

## A Class
"
`;
